--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,10 @@ jobs:
     - name: Fetch the Code
       uses: actions/checkout@v3
 
-    - name: To check the current directory
-      run: ls
-
     - name: Set up the Go environment 
       uses: actions/setup-go@v5.5.0
       with: 
-        go-version-file: go.sum
+        go-version-file: go.mod
 
     - name: Installing dependencies
       run: go mod download
