--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Upload the packaged Binary
       uses: actions/upload-artifact@v4.6.2
       with: 
-        path: hexDumper-go
+        path: hexDumper
