Initial 1.0 release for the utility

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           artifacts: "hexDumper"
           bodyFile: "Release.txt"
-          name: ${{ github.ref_name }}
+          tag: ${{ github.ref_name }}
